// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`billingPlanFeatures getEnterprisePlanCardFeatures should return plan card features for the enterprise plan 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <React.Fragment>
      Discounted prices for 
      <b>
        10k+ tickets
      </b>
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": "Custom limit of phone numbers",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_car"
    />,
    "label": <React.Fragment>
      <b>
        Full
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": false,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": false,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for Advanced price 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      costPerTicket={0.36}
      currency="usd"
      freeTickets={5000}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        10
      </b>
       Phone number
      s
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_car"
    />,
    "label": <React.Fragment>
      <b>
        Full
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": false,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for Basic price 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      costPerTicket={0.4}
      currency="usd"
      freeTickets={300}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        1
      </b>
       Phone number
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_walk"
    />,
    "label": <React.Fragment>
      <b>
        Self
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": true,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for Custom price 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      costPerTicket={0.32}
      currency="usd"
      freeTickets={10000}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        150
      </b>
       Phone number
      s
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_car"
    />,
    "label": <React.Fragment>
      <b>
        Full
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": false,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": false,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for Pro price 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      costPerTicket={0.36}
      currency="usd"
      freeTickets={2000}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        3
      </b>
       Phone number
      s
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_bike"
    />,
    "label": <React.Fragment>
      <b>
        Lite
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for Starter price 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      costPerTicket={0.4}
      currency="usd"
      freeTickets={50}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": true,
    "label": "Phone",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_walk"
    />,
    "label": <React.Fragment>
      <b>
        Self
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": true,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for legacy price 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      costPerTicket={0.06}
      currency="usd"
      freeTickets={600}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        1
      </b>
       Phone number
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_bike"
    />,
    "label": <React.Fragment>
      <b>
        Lite
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": true,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features with disabled help center 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      costPerTicket={0.4}
      currency="usd"
      freeTickets={300}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        1
      </b>
       Phone number
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_walk"
    />,
    "label": <React.Fragment>
      <b>
        Self
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": true,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;
